[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Graphics/Towers/Factory/factory_off.png" type="Texture" id=1]
[ext_resource path="res://Assets/Code/Scripts/Electricity/Factory.gd" type="Script" id=2]
[ext_resource path="res://Assets/Code/Scenes/Electricity/EnergyRadius.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="Factory" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="AnimatedSprite" parent="."]
position = Vector2( -8, 2 )
frames = SubResource( 1 )
animation = "off"
centered = false

[node name="EnergyRadius" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 16 )

[node name="Hitbox" type="TextureRect" parent="."]
margin_left = -10.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
